# libswt

./: CMakeLists.txt  LICENSE  README.md  example.c  swt.h
src/: api.c  basic.c  ccv.h  ccv_internal.h  ccv_util.c  classic.c  memory.c  swt.c
